// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateOpinion /> when the query is on desktop should render a FOR opinion 1`] = `
<div
  className="sc-bdnxRM gYjpOg cap-card"
>
  <div
    className="sc-bdnxRM fRDPLm sc-fXazdy llVDbw cap-tag"
    style={Object {}}
    title=""
  >
    <span
      className="sc-bdnxRM KpOXB cap-text"
    >
      opinion.for
    </span>
  </div>
  <div
    className="sc-bdnxRM dPstku"
  />
  <div
    className="sc-bdnxRM bqcJNK"
  >
    <div
      className="sc-bdnxRM xxmyc"
    >
      <div
        className="sc-bdnxRM bDSBfS sc-ckTSus hqXPTB cap-avatar"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
        title="Agui le penseur"
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnxRM jVCZhC"
          src="<mock-value-for-field-\\"url\\">"
          style={
            Object {
              "objectFit": "cover",
            }
          }
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnxRM MKAHO"
      >
        <p
          className="sc-bdnxRM dWfVYr cap-text"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnxRM giDgev cap-text"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnxRM dZUplD"
    >
      <h4
        className="sc-bdnxRM iJMGcs cap-heading"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnxRM ipdWIi cap-text"
      >
        <div
          className=" ql-editor wysiwyg-render"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on desktop should render an AGAINST opinion 1`] = `
<div
  className="sc-bdnxRM gYjpOg cap-card"
>
  <div
    className="sc-bdnxRM fRDPLm sc-fXazdy llVDbw cap-tag"
    style={Object {}}
    title=""
  >
    <span
      className="sc-bdnxRM KpOXB cap-text"
    >
      opinion.for
    </span>
  </div>
  <div
    className="sc-bdnxRM dPstku"
  />
  <div
    className="sc-bdnxRM bqcJNK"
  >
    <div
      className="sc-bdnxRM xxmyc"
    >
      <div
        className="sc-bdnxRM bDSBfS sc-ckTSus hqXPTB cap-avatar"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
        title="Agui le penseur"
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnxRM jVCZhC"
          src="<mock-value-for-field-\\"url\\">"
          style={
            Object {
              "objectFit": "cover",
            }
          }
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnxRM MKAHO"
      >
        <p
          className="sc-bdnxRM dWfVYr cap-text"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnxRM giDgev cap-text"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnxRM dZUplD"
    >
      <h4
        className="sc-bdnxRM iJMGcs cap-heading"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnxRM ipdWIi cap-text"
      >
        <div
          className=" ql-editor wysiwyg-render"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on desktop should render with a read more link 1`] = `
<div
  className="sc-bdnxRM kcSrfm cap-card"
>
  <div
    className="sc-bdnxRM fRDPLm sc-fXazdy llVDbw cap-tag"
    style={Object {}}
    title=""
  >
    <span
      className="sc-bdnxRM KpOXB cap-text"
    >
      opinion.for
    </span>
  </div>
  <div
    className="sc-bdnxRM bqcJNK"
  >
    <div
      className="sc-bdnxRM xxmyc"
    >
      <div
        className="sc-bdnxRM bDSBfS sc-ckTSus hqXPTB cap-avatar"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
        title="Agui le penseur"
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnxRM jVCZhC"
          src="<mock-value-for-field-\\"url\\">"
          style={
            Object {
              "objectFit": "cover",
            }
          }
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnxRM MKAHO"
      >
        <p
          className="sc-bdnxRM dWfVYr cap-text"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnxRM giDgev cap-text"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnxRM dZUplD"
    >
      <h4
        className="sc-bdnxRM iJMGcs cap-heading"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnxRM ipdWIi cap-text"
      >
        <div
          className=" ql-editor wysiwyg-render"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on mobile should render a FOR opinion 1`] = `
<div
  className="sc-bdnxRM gYjpOg cap-card"
>
  <div
    className="sc-bdnxRM fRDPLm sc-fXazdy llVDbw cap-tag"
    style={Object {}}
    title=""
  >
    <span
      className="sc-bdnxRM KpOXB cap-text"
    >
      opinion.for
    </span>
  </div>
  <div
    className="sc-bdnxRM dPstku"
  />
  <div
    className="sc-bdnxRM bqcJNK"
  >
    <div
      className="sc-bdnxRM xxmyc"
    >
      <div
        className="sc-bdnxRM bDSBfS sc-ckTSus hqXPTB cap-avatar"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
        title="Agui le penseur"
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnxRM jVCZhC"
          src="<mock-value-for-field-\\"url\\">"
          style={
            Object {
              "objectFit": "cover",
            }
          }
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnxRM MKAHO"
      >
        <p
          className="sc-bdnxRM dWfVYr cap-text"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnxRM giDgev cap-text"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnxRM dZUplD"
    >
      <h4
        className="sc-bdnxRM iJMGcs cap-heading"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnxRM ipdWIi cap-text"
      >
        <div
          className=" ql-editor wysiwyg-render"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
      <button
        className="sc-bdnxRM sc-lbVvki hEEahL gAloIW cap-button DebateOpinion___StyledButton-eaGvMt iPqugS"
        onClick={[Function]}
        type="button"
      >
        capco.module.read_more
      </button>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on mobile should render with a read more link 1`] = `
<div
  className="sc-bdnxRM kcSrfm cap-card"
>
  <div
    className="sc-bdnxRM fRDPLm sc-fXazdy llVDbw cap-tag"
    style={Object {}}
    title=""
  >
    <span
      className="sc-bdnxRM KpOXB cap-text"
    >
      opinion.for
    </span>
  </div>
  <div
    className="sc-bdnxRM bqcJNK"
  >
    <div
      className="sc-bdnxRM xxmyc"
    >
      <div
        className="sc-bdnxRM bDSBfS sc-ckTSus hqXPTB cap-avatar"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
        title="Agui le penseur"
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnxRM jVCZhC"
          src="<mock-value-for-field-\\"url\\">"
          style={
            Object {
              "objectFit": "cover",
            }
          }
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnxRM MKAHO"
      >
        <p
          className="sc-bdnxRM dWfVYr cap-text"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnxRM giDgev cap-text"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnxRM dZUplD"
    >
      <h4
        className="sc-bdnxRM iJMGcs cap-heading"
        style={
          Object {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnxRM ipdWIi cap-text"
      >
        <div
          className=" ql-editor wysiwyg-render"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
      <button
        className="sc-bdnxRM sc-lbVvki hEEahL gAloIW cap-button DebateOpinion___StyledButton-eaGvMt iPqugS"
        onClick={[Function]}
        type="button"
      >
        capco.module.read_more
      </button>
    </div>
  </div>
</div>
`;
